# backend-gamelog

./: .gitignore  Makefile  Project_Lab.md  README.md  login.html  main.py  pyproject.toml  server.py
alembic/: env.py
alembic/versions/: a68d14cfbc2c_create_users_table.py
app/: main.py
app/api/v1/routes/: auth.py  health.py
app/core/: database.py  security.py
app/models/: __init__.py  user.py
app/repositories/: user_repository.py
app/schemas/: user.py
app/services/: auth_service.py
tests/: conftest.py  test_auth.py  test_security.py
